feat(app): add REPL with command parsisng and redraw